--- a/.github/workflows/stat.yml
+++ b/.github/workflows/stat.yml
@@ -1,9 +1,11 @@
 name: GitHub Stats
+
 on:
   push:
     branches: [ main ]
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch: # Add this line to enable manual runs
 
 jobs:
   update-stats:
